[[bin]]
name = "arc154-a"
path = "src/bin/a.rs"

[[bin]]
name = "arc154-b"
path = "src/bin/b.rs"

[[bin]]
name = "arc154-c"
path = "src/bin/c.rs"

[[bin]]
name = "arc154-d"
path = "src/bin/d.rs"

[[bin]]
name = "arc154-e"
path = "src/bin/e.rs"

[[bin]]
name = "arc154-f"
path = "src/bin/f.rs"

[package]
name = "arc154"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.arc154-a]
alias = "a"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_a"

[package.metadata.cargo-compete.bin.arc154-b]
alias = "b"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_b"

[package.metadata.cargo-compete.bin.arc154-c]
alias = "c"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_c"

[package.metadata.cargo-compete.bin.arc154-d]
alias = "d"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_d"

[package.metadata.cargo-compete.bin.arc154-e]
alias = "e"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_e"

[package.metadata.cargo-compete.bin.arc154-f]
alias = "f"
problem = "https://atcoder.jp/contests/arc154/tasks/arc154_f"
